refix Bug ZK-2359: Autopaging causes flickering of list

--- a/zul/src/archive/web/js/zul/grid/less/grid.less
+++ b/zul/src/archive/web/js/zul/grid/less/grid.less
@@ -246,8 +246,11 @@
 }
 .z-grid-autopaging {
 	.z-row-content,
-	.z-group-content,
 	.z-groupfoot-content {
+		height: 32px;
+		overflow: hidden;
+	}
+	.z-group-content {
 		height: 30px;
 		overflow: hidden;
 	}
