--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -355,7 +355,7 @@
 	}
 }
 .z-listbox-autopaging .z-listcell-content {
-	height: 30px;
+	height: 32px;
 	overflow: hidden;
 }
 //column menu
