--- a/zul/src/archive/web/js/zul/sel/less/tree.less
+++ b/zul/src/archive/web/js/zul/sel/less/tree.less
@@ -251,7 +251,7 @@
 .z-dottree-autopaging .z-treecell-content,
 .z-filetree-autopaging .z-treecell-content,
 .z-vfiletree-autopaging .z-treecell-content {
-	height: 30px;
+	height: 32px;
 	overflow: hidden;
 }
 // ZK-2151: use strict selector to prevent nest problem
